# Sofia

./: .gitmodules  CMakeLists.txt
Example/: CMakeLists.txt
Example/src/: Example.cpp
Sofia/: CMakeLists.txt
Sofia/src/: Sofia.h
Sofia/src/Platform/Windows/: WindowsGraphicsContext.cpp  WindowsGraphicsContext.h  WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Sofia/src/Sofia/: Application.cpp  Application.h  EntryPoint.h  Input.cpp  Input.h  Log.cpp  Log.h  Window.cpp  Window.h
Sofia/src/Sofia/Events/: ApplicationEvent.h  Event.h  MouseEvent.h
Sofia/src/Sofia/Geometry/: Rectangle.h
Sofia/src/Sofia/Graphics/: Color.h  Font.h  GraphicsContext.cpp  GraphicsContext.h
Sofia/src/Sofia/Widgets/: State.cpp  State.h  Theme.cpp  Theme.h  Widgets.cpp  Widgets.h
